--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+VERSION 1.10.1
+-------------
+
+  o fix bug in reaction2edge function, which throw error for a few
+    metabolic pathways with no multi-node reaction group (examples
+    including 00072, 00100).
+
 VERSION 1.9.3
 -------------
 
